Fix Layout Issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,10 @@ ul {
   margin-bottom: 0;
 }
 
+.welcome-text {
+  padding: 1rem;
+}
+
 .welcome-note {
   text-align: center;
 }
@@ -162,9 +166,17 @@ ul {
 }
 
 .showcase button {
-  background: var(--color-secondary);
+  background: var(--color-secondary) !important;
   color: var(--color-primary);
   margin: 2rem 0;
+  border: none;
+}
+
+.showcase button:hover {
+  background: var(--color-primary) !important;
+  color: var(--color-secondary);
+  margin: 2rem 0;
+  border: 0;
 }
 
 /* Showcase styles ends */
@@ -309,7 +321,7 @@ ul {
 }
 
 .footer::before {
-  content: '';
+  content: ''; /* TODO: Add logo here */
   width: 8rem;
   position: absolute;
   height: 8rem;
